update in real time devitts and delete conf firebase key

--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,5 @@ yarn-error.log*
 # vercel
 .vercel
 
-.twitterClone/devtter/firebase/firebase-keys.json
-twitterClone/devtter/firebase/.firebase-keys.json
+# firebase keys
+firebase/firebase-keys.json
